--- a/install.txt
+++ b/install.txt
@@ -1,6 +1,9 @@
 sudo apt-get install nodejs npm tesseract-ocr
 sudo npm install pm2 -g
 
+https://github.com/tesseract-ocr/tessdata/raw/master/rus.traineddata
+cp ./rus.traineddata /usr/share/tesseract-ocr/4.00/tessdata
+
 copy rus.traineddata
 chmod 777 на папку
 
